<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomDatabase.PersonDetailsActivity"
    android:background="@android:color/darker_gray">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/user_name_start"
        android:id="@+id/user_name_text"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/test_size_18sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_layout_height_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name_text"
        android:id="@+id/name_layout"
        android:background="@drawable/edittext_drawable_background"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="12dp">
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/enter_your_user_name"
            android:inputType="text"
            android:maxEms="1"
            android:textColor="@android:color/darker_gray"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:text="@string/age"
        android:id="@+id/user_age_text"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/test_size_18sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_layout_height_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_age_text"
        android:id="@+id/age_layout"
        android:background="@drawable/edittext_drawable_background"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="12dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/enter_your_age"
            android:inputType="number"
            android:id="@+id/age"
            android:maxEms="1"
            android:textColor="@android:color/darker_gray"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/age_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:text="@string/address"
        android:id="@+id/user_address_text"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/test_size_18sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_layout_height_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_address_text"
        android:id="@+id/address_layout"
        android:background="@drawable/edittext_drawable_background"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="12dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/enter_your_address"
            android:inputType="text"
            android:maxEms="1"
            android:id="@+id/address"
            android:textColor="@android:color/darker_gray"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/button"
        android:layout_width="70dp"
        android:layout_height="@dimen/text_height_size"
        app:layout_constraintTop_toBottomOf="@id/address_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_8dp"
        android:textColor="@color/white"
        android:background="@drawable/camera_permission_button_drawable_ripple"
        android:text="@string/insert"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/view"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>