<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="false"
    style="@style/Base.CardView">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="8dp">
        <TextView
            android:id="@+id/why_camera_permission_needed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera_text"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/margin_start_for_camera_permission_popup"
            android:layout_marginEnd="@dimen/margin_end_for_camera_permission_popup"
            android:padding="@dimen/padding_for_camera_permission_popup"
            android:textSize="@dimen/text_size_for_camera_permission_popup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/why_camera_permission_needed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/cancel"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_camera_permission"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/camera_permission_button_drawable_ripple"/>
        <TextView
            android:id="@+id/ok"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_camera_permission"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:background="@drawable/camera_permission_button_drawable_ripple"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>